--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -16,5 +16,17 @@
 	"subpagenavigation-browse-topnav": "A label message",
 	"subpagenavigation-browse-default": "A label message",
 	"subpagenavigation-browse-folders": "A label message",
-	"subpagenavigation-browse-filesystem": "A label message"
+	"subpagenavigation-browse-filesystem": "A label message",
+
+	"subpagenavigation-toc-title": "A label message",
+	"subpagenavigation-tree-collapse": "A label message",
+	"subpagenavigation-tree-expand": "A label message",
+	"subpagenavigation-tree-member-counts": "A label message",
+	"subpagenavigation-tree-member-num": "A label message",
+	"subpagenavigation-tree-load": "A label message",
+	"subpagenavigation-tree-loading": "A label message",
+	"subpagenavigation-tree-nothing-found": "A label message",
+	"subpagenavigation-tree-no-subpages": "A label message",
+	"subpagenavigation-tree-error": "A label message",
+	"subpagenavigation-tree-retry": "A label message"
 }
