--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -3,6 +3,9 @@
 		"authors": []
 	},
 	"subpagenavigation-extension-desc": "A label message",
+	"subpagenavigation-tree": "A label message",
+	"subpagenavigation-portlet": "A label message",
+	"subpagenavigation-browse-topnav-namespace": "A label message",
 	"specialpages-group-subpagenavigation": "A label message",
 	"apihelp-subpagenavigation-check-latest-version-summary": "A label message",
 	"subpagenavigationbrowse": "A label message",
@@ -17,6 +20,9 @@
 	"subpagenavigation-browse-default": "A label message",
 	"subpagenavigation-browse-folders": "A label message",
 	"subpagenavigation-browse-filesystem": "A label message",
+	"apihelp-subpagenavigation-tree-summary": "A label message",
+	"apihelp-subpagenavigation-tree-param-title": "A label message",
+	"apihelp-subpagenavigation-tree-param-options": "A label message",
 
 	"subpagenavigation-toc-title": "A label message",
 	"subpagenavigation-tree-collapse": "A label message",
